# usbd-ctaphid

./: Cargo.toml  LICENSE.md  Makefile
pytests/: basic.py
src/: authenticator.rs  bytes.rs  bytevec.rs  cbor.rs  class.rs  constants.rs  derpy.rs  insecure.rs  interfaces.rs  lib.rs  macros.rs  pipe.rs  types.rs
src/types/: ctap1.rs
src/types/ctap2/: client_pin.rs
